--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </div></br>
 
-<body style=" background: url(hitam.jpg)">
+<body style=" background: url(hitam.jpg) no-repeat;">
 <div style="float:left; width: 900px; height: 850px; border-radius: 45px;margin-right:300px; margin-left: 220px;border: 5px solid #646569; color :#b1b3b9">
 	<h2 style="text-align:left; margin-top:30px; margin-left: 30px;">IDENTITAS DIRI</h2> 
 			<ul><pre>Nama                	: Fatimah Novi Warkita</pre></ul>
