--- a/edit.html
+++ b/edit.html
@@ -1,6 +1,6 @@
 <DOCTYPE! html>
 <html>
-<body style=" background : url(apa.jpg)">
+<body style=" background : url(apa.jpg) no-repeat;">
 <form method = "post/get" action ="tujuan.html">
 <br>
 <div style="text-align: center ; font-family: Georgia ; background-color: #aad1c9; border-radius: 30px; border: 5px solid #499989; padding: 20px; width: 700px; hight: 10px; margin-left:300px;">
